# ProtoIO

./: CDMake.cpp  CDMake.h  CMakeLists.txt  CardData.proto  ProtoIO.cpp  ProtoIO.h  README.md  main  main.cpp  main_cpp  proto_test.pb.cc  proto_test.pb.h  proto_test.proto  test.txt
MsgFileOutput/: VecTest.txt
dependencies/: CardData.pb.cc  CardData.pb.h  CardData.proto
include/: ProtoIO.h  Utils.h  defs.h
src/: ProtoIO.cpp  Utils.cpp
